Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109337

fatal error: 'waylandwindow.h' file not found

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.5.0
    • 6.5.0 FF
    • Qt Application Manager
    • None
    • cd1258c09 (dev), 3a051fac4 (dev)

    Description

      lib/CMakeFiles/AppManMainPrivate.dir/windowframetimer.cpp.o -c /Users/qt/work/qt/qtapplicationmanager/src/main-lib/windowframetimer.cpp
      agent:2022/12/12 04:47:44 build.go:399: /Users/qt/work/qt/qtapplicationmanager/src/main-lib/windowframetimer.cpp:10:10: fatal error: 'waylandwindow.h' file not found
      agent:2022/12/12 04:47:44 build.go:399: #include "waylandwindow.h"
      agent:2022/12/12 04:47:44 build.go:399:          ^~~~~~~~~~~~~~~~~
      agent:2022/12/12 04:47:44 build.go:399: 1 error generated.
      

      Build log: https://testresults.qt.io/logs/qt/qtapplicationmanager/30483fea819ed310a812e8d9e864ccc98ae73d68/MacOSMacOS_12x86_64MacOSMacOS_12x86_64Clangqtci-macos-12-x86_64-105-91f61cSccache_UseConfigure_WarningsAreErrors/fc5b66b4f63400cab8c7835b209d3ed77ca12f94/build_1680544215/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1680544151

      Tested changes (refs/builds/qtci/dev/1670820338):
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/447957/2 Update dependencies on 'dev' in qt/qtapplicationmanager

      Attachments

        For Gerrit Dashboard: QTBUG-109337
        # Subject Branch Project Status CR V

        Activity

          People

            alexandru.croitor Alexandru Croitor
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes